--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,14 @@
 Homestead.json
 Homestead.yaml
 .env
+.env.example
 .DS_STORE
 
-.env.example
 .gitattributes
+
+/bootstrap/cache/*
+bootstrap/cache/*
+composer.lock
+
+storage/exports
+storage/exports/*
